..F....... [ZBX-26048] fixed title spacing

--- a/sass/stylesheets/sass/components/_message-box.scss
+++ b/sass/stylesheets/sass/components/_message-box.scss
@@ -124,7 +124,7 @@ output {
 			}
 
 			.msg-details {
-				display: none;
+				max-height: 5px;
 				padding-top: 0;
 				border-top: none;
 				opacity: 0;
